fix(left sidebar): fix navbar showing alongside delete request modal (#781)
- change the z-index of the sidebar to appear behind the overlay

[Fixes #165238242]

--- a/src/components/LeftSideBar/_leftSideBar.scss
+++ b/src/components/LeftSideBar/_leftSideBar.scss
@@ -30,7 +30,7 @@
 
     @media (min-width: 1178px)  {
       background: #f8f8f8;
-      z-index: 20;
+      z-index: 10;
     }
   }
   
